# fp8-mps-metal

./: .gitignore  CLAUDE.md  README.md  SPEEDUP.md  fp8_bridge.cpp  fp8_matmul.metal  fp8_mps_native.py  fp8_mps_patch.py  setup.py  test_fp8_metal.py
docs/superpowers/plans/: 2026-04-08-fp8-optimizations-p8-p18.md
tests/: bench_ai_workloads.py  conftest.py  pyproject.toml  test_correctness.py
