[project]
name = "fp8-mps-tests"
version = "0.1.0"
description = "Tests and benchmarks for fp8-mps-metal kernels"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
addopts = "-v --tb=short"
markers = [
    "benchmark: performance benchmark (deselect with -m 'not benchmark')",
]
